syntax = "proto3";
package KBMGrpcService.Grpc;
option csharp_namespace = "KBMGrpcService.Grpc";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

message UserMessage {
  string id = 1;
  string name = 2;
  string username = 3;
  string email = 4;
  google.protobuf.Timestamp createdAt = 5;
  google.protobuf.Timestamp updatedAt = 6;
}

message CreateUserRequest {
  string name = 1;
  string username = 2;
  string email = 3;
}

message CreateUserReply {
  string id = 1;
}

message GetUserByIdRequest {
  string id = 1;
}

message GetUserByIdReply {
  UserMessage user = 1;
}

message QueryUsersRequest {
  int32 page = 1;
  int32 pageSize = 2;
  string orderBy = 3;
  bool descending = 4;
  string query = 5;
}

message QueryUsersReply {
  int32 page = 1;
  int32 pageSize = 2;
  int64 total = 3;
  repeated UserMessage items = 4;
}

message UpdateUserRequest {
  string id = 1;
  string name = 2;
  string username = 3;
  string email = 4;
}

message DeleteUserRequest {
  string id = 1;
}

message AssociateUserRequest {
  string userId = 1;
  string organizationId = 2;
}

message QueryUsersForOrganizationRequest {
  string organizationId = 1;
  int32 page = 2;
  int32 pageSize = 3;
  string orderBy = 4;
  bool descending = 5;
  string query = 6;
}


service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserReply);
  rpc GetUserById(GetUserByIdRequest) returns (GetUserByIdReply);
  rpc QueryUsers(QueryUsersRequest) returns (QueryUsersReply);
  rpc UpdateUser(UpdateUserRequest) returns (google.protobuf.Empty);
  rpc DeleteUser(DeleteUserRequest) returns (google.protobuf.Empty);
  rpc AssociateUser(AssociateUserRequest) returns (google.protobuf.Empty);
  rpc DisassociateUser(AssociateUserRequest) returns (google.protobuf.Empty);
  rpc QueryUsersForOrganization(QueryUsersForOrganizationRequest) returns (QueryUsersReply);
}